<resources>
    <string name="app_name">E-Sniper</string>

    <string name="look_in_as">Look in as</string>
    <string name="Guest">Guest</string>
    <string name="sign">Sign</string>
    <string name="in">In</string>

    <string name="new_user">New User ?</string>
    <string name="register">Register</string>

    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Contact">Contact</string>
    <string name="Disclaimer">Disclaimer</string>
    <string name="Prices">Prices</string>
    <string name="Terms_and_Conditions" formatted="false">Terms &amp; Conditions</string>

    <string name="Register_as">Register As</string>
    <string name="Sign_in_as">Sign In As</string>
    <string name="Cutomer">Customer</string>
    <string name="Service_Provider">Service Provider</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="SignIn">Sign In</string>
    <string name="ForgotPassword">Forgot Password ?</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <string name="Next">Next</string>
    <string name="Name">Name / Nick Name</string>
    <string name="i_agree_">I agree to the</string>
    <string name="Terms_and_Conditions_UnderLine" formatted="false"> <u>Terms &amp; Conditions</u></string>


    <string name="Are_You"> Are </string>
    <string name="YouA">You A</string>
    <string name="Place">Place</string>
    <string name="Person">Person</string>
    <string name="EscortAgenct">Escort Agency</string>
    <string name="Register">Register</string>
    <string name="Registration">Registration</string>
    <string name="Success">Success</string>
    <string name="Click">Click</string>
    <string name="Here"><u>HERE</u></string>
    <string name="ForLogin">For Login</string>
    <string name="drawer_opened">open</string>
    <string name="drawer_closed">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

</resources>
