<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Ll_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_shape"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look_in_as"
                android:textAllCaps="true"
                android:textColor="@color/WHITE"
                android:textSize="@dimen/TextSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/Guest"
                android:textAllCaps="true"
                android:textColor="@color/ORANGE"
                android:textSize="@dimen/TextSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Ll_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_shape"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign"
                android:textAllCaps="true"
                android:textColor="@color/WHITE"
                android:textSize="@dimen/TextSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/in"
                android:textAllCaps="true"
                android:textColor="@color/ORANGE"
                android:textSize="@dimen/TextSize" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/Ll_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_shape"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textAllCaps="true"
                android:textColor="@color/WHITE"
                android:textSize="@dimen/TextSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/ORANGE"
                android:textSize="@dimen/TextSize" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/Ll_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_TermAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/Terms_and_Conditions"
                android:textColor="@color/PINK"
                android:textSize="@dimen/optionsText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="|"
                android:textColor="@color/WHITE"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txt_PrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/PrivacyPolicy"
                android:textColor="@color/ORANGE"
                android:textSize="@dimen/optionsText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Ll_otherOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Ll_options"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/Contact"
                android:textColor="@color/PINK"

                android:textSize="@dimen/optionsText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="|"
                android:textColor="@color/WHITE"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txt_disclarmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/Disclaimer"
                android:textColor="@color/ORANGE"

                android:textSize="@dimen/optionsText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="|"
                android:textColor="@color/WHITE"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txt_Prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/Prices"
                android:textColor="@color/PINK"
                android:textSize="@dimen/optionsText" />
        </LinearLayout>

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_below="@+id/Ll_otherOptions"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/ORANGE" />
    </RelativeLayout>

</RelativeLayout>
   


   