<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    tools:context=".Signin_as_Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Are_You"
                    android:textColor="@color/WHITE"
                    android:textSize="@dimen/TextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/YouA"
                    android:textColor="@color/ORANGE"
                    android:textSize="@dimen/TextSize" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_Place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_shape"
                android:text="@string/Place"
                android:textAllCaps="true"
                android:textColor="@color/WHITE" />


            <Button
                android:id="@+id/btn_Person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_shape"
                android:text="@string/Person"
                android:textAllCaps="true"
                android:textColor="@color/WHITE" />


            <Button
                android:id="@+id/btn_EscortServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_shape"
                android:text="@string/EscortAgenct"
                android:textAllCaps="true"

                android:textColor="@color/WHITE" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
