<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    tools:context=".Signin_as_Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250sp"
                android:layout_height="180sp"
                android:layout_gravity="center"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:src="@drawable/splash_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:textColor="@color/WHITE"
                    android:paddingLeft="10sp"
                    android:textColorHint="@color/HintColor"
                    android:textSize="@dimen/EditTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edt_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:paddingLeft="10sp"
                    android:inputType="textPassword"
                    android:textColor="@color/WHITE"
                    android:textSize="@dimen/EditTextSize"
                    android:textColorHint="@color/HintColor" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/PINK"
                android:text="@string/SignIn"
                android:textAllCaps="true"
                android:textColor="@color/WHITE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/ForgotPassword"
                android:textColor="@color/ORANGE" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
