<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    tools:context=".Signin_as_Activity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Ll_AsCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edit_text_shape"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_in_as"
                    android:textAllCaps="true"
                    android:textColor="@color/WHITE"
                    android:textSize="@dimen/TextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/Cutomer"
                    android:textAllCaps="true"
                    android:textColor="@color/ORANGE"
                    android:textSize="@dimen/TextSize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Ll_As_Service_Provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_shape"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_in_as"
                    android:textAllCaps="true"
                    android:textColor="@color/WHITE"
                    android:textSize="@dimen/TextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/Service_Provider"
                    android:textAllCaps="true"
                    android:textColor="@color/ORANGE"
                    android:textSize="@dimen/TextSize" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
